--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp",
-    "start": "gulp clean && gulp && http-server ./dist -p 9000",
+    "start": "gulp && http-server ./dist -p 9000",
     "watch": "gulp watch"
   },
   "repository": {
@@ -27,14 +27,14 @@
   "homepage": "https://github.com/w8s/bootstrap-banner-message#readme",
   "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
-    "gulp-clean": "^0.3.2",
-    "gulp-sass": "^3.1.0",
-    "http-server": "^0.10.0",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^7.0.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-sass": "^4.0.1",
+    "http-server": "^0.11.1",
     "path": "^0.12.7"
   }
 }
